@startuml

skinparam linetype ortho
skinparam nodesep 100
skinparam ranksep 100

!startsub BENCHMARK_RUNNER

class BenchmarkRunner {
    - test_manager : TestManager
    - connection : ServerConnection
    - request_handler : CommandHandler
    + BenchmarkRunner(benchmark : BenchmarkDescription, connectionConfig : ConnectionConfig)
    + run_benchmark() : TestRun[]
}

class TestManager {
    '- test_records : TestRecord[]
    + assign_test(test_name : str)
    + get_test_description(test_name : str)
    + all_tests_done() : bool
}

class TestRecord {
    - assigned : bool
    - done : bool
    - test_description : TestDescription
    - test_result : TestRun
    + __init__(test_description : TestDescription)
    + is_assigned() : bool
    + is_done() : bool
    + set_assigned()
    + set_done()
    + get_test_description() : TestDescription
    + get_test_result() : TestRun
}

class CommandHandler {
    - command_name : String
    - command_function : func()
    - execute(payload : str) : Message
}

BenchmarkRunner --> TestManager : - test_manager
TestManager --* TestRecord : - test_records : TestRecord[ ]
BenchmarkRunner -r-> ServerConnection : - connection
!endsub



@enduml